up next block working

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     <h3>Score<span id="score">0</span></h3>
     <button id="start-button">Start/Pause</button>
-    <div class="grid" id="grid"> 
+    <div class="container">
+    <div class="grid"> 
 
     <div></div>
     <div></div>
@@ -224,8 +225,28 @@
     <div class="taken"></div>
     <div class="taken"></div>
 
+    </div>
 
-    
+<div class="mini-grid">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>    
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+
+    </div>
+
 </div>
 </body>
 </html>
