text fixes and start of css changes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>Tetris</title>
 </head>
 <body>
-
-    <h3>Score<span id="score">0</span></h3>
+<div class="game-options">
+    <h3 id="points">Score: <span id="score">0</span></h3>
     <button id="start-button">Start/Pause</button>
+</div>
     <div class="container">
     <div class="grid"> 
 
@@ -226,8 +227,10 @@
     <div class="taken"></div>
 
     </div>
-
+    <div class="mini-section">
+    <h3 id="mini-text">Up next</h3>
 <div class="mini-grid">
+    
     <div></div>
     <div></div>
     <div></div>
@@ -244,7 +247,7 @@
     <div></div>
     <div></div>
     <div></div>
-
+</div>
     </div>
 
 </div>
