added lines counter

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 <div class="game-options">
     <h3 id="points">Score: <span id="score">0</span></h3>
+    <h3>Lines: <span id="lines">0</span></h3>
     <button id="start-button">Start/Pause</button>
 </div>
     <div class="container">
