added hold container

--- a/index.html
+++ b/index.html
@@ -14,6 +14,31 @@
     <button id="start-button">Start/Pause</button>
 </div>
     <div class="container">
+
+        <div class="hold-section">
+            <h3 id="hold-text">in hold</h3>
+        <div class="hold-grid">
+            
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>    
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+            </div>
+
+
     <div class="grid"> 
 
     <div></div>
