started building new game button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h3 id="points">Score: <span id="score">0</span></h3>
     <h3>Lines: <span id="lines">0</span></h3>
     <button id="start-button">Start/Pause</button>
+    <button id="new-game">Start a new Game</button>
 </div>
     <div class="container">
 
